Fixing search terms chips exceeding height spilling over results  (#1721)
* init

* adding changees to left and right padding an top and bottom, align centered an element

* removing unneccesory useEffect

* adding gap and removing margin and modifying padding

--- a/apps/modernization-ui/src/apps/search/layout/result/search-results.module.scss
+++ b/apps/modernization-ui/src/apps/search/layout/result/search-results.module.scss
@@ -4,11 +4,7 @@ $pagination-height: 4.75rem;
 .results {
     height: 100%;
     .header {
-        height: #{$header-height};
-    }
-
-    .content {
-        height: calc(100% - #{$header-height} - #{$pagination-height});
+        min-height: #{$header-height};
     }
 
     .pagination {
