--- a/apps/modernization-ui/src/design-system/chips/chip.module.scss
+++ b/apps/modernization-ui/src/design-system/chips/chip.module.scss
@@ -1,7 +1,6 @@
 @use 'styles/colors';
 
 .chip-container {
-    margin: 0 0 0.1rem 0.25rem;
     padding: 0.25rem;
     font-size: 0.75rem;
     background-color: colors.$primary-lighter;
